--- a/project.ipynb
+++ b/project.ipynb
@@ -16,94 +16,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a39f0231-a027-4d0d-ab19-2bc35c0a38d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import math\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from fractions import Fraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b8d4989a-b699-4c20-93be-c6a8afbf09ed",
    "metadata": {},
    "outputs": [],
    "source": [
     "# HELPER AND UTILITY FUNCTION\n",
-    "# Calculate reduce sum over finite\n",
     "def calculate_reduce_sum(values):\n",
-    "    sum = 0.0\n",
-    "    \n",
+    "    s = 0.0\n",
     "    for i in range(len(values)):\n",
-    "        sum += values[i]\n",
+    "        s += values[i]\n",
+    "    return float(s)\n",
     "\n",
-    "    return float(sum)\n",
-    "\n",
-    "# Manaully Calculate Mean E[X] = sum(xpx)\n",
     "def calculate_expectation(weights, values):\n",
     "    average = 0.0\n",
     "    for i in range(len(values)):\n",
     "        average += weights[i]*values[i]\n",
-    "\n",
     "    return average\n",
     "\n",
-    "# Manually calculate variance Var(X) = E[X**2] - E[X]**2\n",
     "def calculate_variance(weights, values):\n",
     "    E_X  = calculate_expectation(weights, values)\n",
     "    E_X2 = calculate_expectation(weights, [v**2 for v in values])\n",
     "    return E_X2 - E_X**2\n",
     "\n",
-    "# Generally generate discrete samples, with inversion method\n",
     "def generate_discrete_sample(values, probs, N=1):\n",
-    "    cdf = []\n",
-    "    cumul = 0.0\n",
+    "    cdf, cumul = [], 0.0\n",
     "    for p in probs:\n",
     "        cumul += p\n",
     "        cdf.append(cumul)\n",
     "    samples = []\n",
     "    for _ in range(N):\n",
-    "        U = np.random.rand()\n",
-    "        k = 0\n",
+    "        U, k = np.random.rand(), 0\n",
     "        while k < len(values) - 1 and U > cdf[k]:\n",
     "            k += 1\n",
     "        samples.append(values[k])\n",
-    "    if N == 1:\n",
-    "        return samples[0]\n",
-    "    return np.array(samples)\n",
+    "    return samples[0] if N == 1 else np.array(samples)\n",
     "\n",
-    "# TO display equation\n",
+    "def _fmt_coef(coef):\n",
+    "    \"\"\"Return coefficient as reduced fraction string if rational, else decimal.\"\"\"\n",
+    "    if isinstance(coef, Fraction):\n",
+    "        return str(coef)\n",
+    "    f = Fraction(coef).limit_denominator(10000)\n",
+    "    if abs(float(f) - coef) < 1e-9:\n",
+    "        return str(f)\n",
+    "    return str(round(coef, 4))\n",
+    "\n",
     "def display_equation(a, b, c, delta):\n",
-    "    a = round(a, 4)\n",
-    "    b = round(b, 4)\n",
-    "    c = round(c, 4)\n",
-    "    delta = round(delta, 4)\n",
-    "\n",
     "    def fmt(coef, var, first=False):\n",
-    "        if coef == 0:\n",
-    "            return \"\"\n",
+    "        if coef == 0: return \"\"\n",
+    "        s = _fmt_coef(coef)\n",
+    "        neg = s.startswith(\"-\")\n",
+    "        abs_s = s.lstrip(\"-\")\n",
     "        if first:\n",
-    "            if coef == 1 and var:\n",
-    "                return var\n",
-    "            elif coef == -1 and var:\n",
-    "                return f\"-{var}\"\n",
-    "            else:\n",
-    "                return f\"{coef}{var}\"\n",
+    "            if s == \"1\"  and var: return var\n",
+    "            if s == \"-1\" and var: return f\"-{var}\"\n",
+    "            return f\"{s}{var}\"\n",
+    "        if neg:\n",
+    "            return f\" - {abs_s}{var}\" if (abs_s != \"1\" or not var) else f\" - {var}\"\n",
     "        else:\n",
-    "            if coef == 1 and var:\n",
-    "                return f\" + {var}\"\n",
-    "            elif coef == -1 and var:\n",
-    "                return f\" - {var}\"\n",
-    "            elif coef > 0:\n",
-    "                return f\" + {coef}{var}\"\n",
-    "            else:\n",
-    "                return f\" - {abs(coef)}{var}\"\n",
+    "            return f\" + {abs_s}{var}\" if (abs_s != \"1\" or not var) else f\" + {var}\"\n",
     "\n",
+    "    delta_str = str(Fraction(delta).limit_denominator(10000)) if isinstance(delta, Fraction) else str(round(float(delta), 4))\n",
     "    eq = fmt(a, \"x²\", first=True) + fmt(b, \"x\") + fmt(c, \"\")\n",
-    "    print(f\"{eq} = 0   Δ = {delta}\")  "
+    "    print(f\"{eq} = 0   Δ = {delta_str}\")"
    ]
   },
   {
@@ -131,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e4c24f7f-e2df-4f52-9e1f-a7c31708d467",
    "metadata": {},
    "outputs": [],
@@ -141,27 +130,20 @@
     "    E       = [i for i in range(-9, 10) if i != 0]     # 18 elements\n",
     "    E_small = [1, 2, 3]                                 # 3 elements\n",
     "\n",
-    "    # Probability of full E, equally\n",
-    "    probs_E     = [1/len(E)]       * len(E)             # 1/18 each\n",
-    "    probs_small = [1/len(E_small)] * len(E_small)       # 1/3 each\n",
+    "    probs_E     = [1/len(E)]       * len(E)\n",
+    "    probs_small = [1/len(E_small)] * len(E_small)\n",
     "\n",
-    "    # Generate Discrete sample a, b from full E\n",
     "    a = generate_discrete_sample(E, probs_E)\n",
     "    b = generate_discrete_sample(E, probs_E)\n",
-    "\n",
-    "    # Generate Discrete sample e from small E\n",
     "    e = generate_discrete_sample(E_small, probs_small)\n",
     "\n",
-    "    # c = (b**2 + e) / (4|a|)  — use abs(a) so the denominator is always positive\n",
-    "    c = (b**2 + e) / (4 * abs(a))\n",
-    "\n",
-    "    # Prevent sign error: when a < 0, flip c so that c > b²/(4a) still holds\n",
+    "    # c = (b²+e)/(4|a|) as a reduced fraction\n",
+    "    c = Fraction(int(b**2 + e), 4 * abs(int(a)))\n",
     "    if a < 0:\n",
     "        c = -c\n",
     "\n",
-    "    delta = b**2 - 4 * a * c\n",
-    "\n",
-    "    return a, b, c, delta"
+    "    delta = Fraction(int(b)**2) - 4 * int(a) * c\n",
+    "    return int(a), int(b), c, delta"
    ]
   },
   {
@@ -257,63 +239,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "30b46fcc-84ff-49cf-b2bc-17cdf75ad5f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Case 3.\n",
     "def generate_discrete_case3():\n",
-    "    E        = [i for i in range(-9, 10) if i != 0]\n",
+    "    E          = [i for i in range(-9, 10) if i != 0]\n",
     "    E_positive = [i for i in range(1, 10)]\n",
-    "    E_small  = [i for i in range(-3, 4) if i != 0]\n",
+    "    E_small    = [i for i in range(-3, 4) if i != 0]\n",
     "\n",
-    "    # Probability of full E, equally\n",
     "    probs_E         = [1/len(E)]          * len(E)\n",
     "    probs_E_positive = [1/len(E_positive)] * len(E_positive)\n",
     "    probs_E_small   = [1/len(E_small)]    * len(E_small)\n",
     "\n",
-    "    # given probability, P(Z=1)=1/2, P(Z=other)=1/(2*17)\n",
+    "    # P(Z=1)=1/2, P(Z=other)=1/(2*17)\n",
     "    probs_Z = [1/2 if i == 1 else 1/(2*17) for i in E]\n",
     "\n",
-    "    # randomly select sub-case\n",
     "    case_prob = generate_discrete_sample([1, 2], [1/2, 1/2])\n",
     "\n",
     "    if case_prob == 1:\n",
-    "        # Case 3.1 — rational roots x1=h/l, x2=k/l\n",
+    "        # Case 3.1 — rational roots\n",
     "        h   = generate_discrete_sample(E, probs_E)\n",
     "        k   = generate_discrete_sample(E, probs_E)\n",
-    "\n",
-    "        # l from Z which given\n",
     "        ell = generate_discrete_sample(E, probs_Z)\n",
     "\n",
-    "        x1 = h / ell\n",
-    "        x2 = k / ell\n",
+    "        x1 = Fraction(int(h), int(ell))\n",
+    "        x2 = Fraction(int(k), int(ell))\n",
     "\n",
-    "        # calcalate a, b, c\n",
     "        a = 1\n",
     "        b = -(x1 + x2)\n",
     "        c = x1 * x2\n",
     "\n",
     "    else:\n",
-    "        # Case 3.2 — roots are x = (-h ± e√p) / l\n",
-    "        # Clear denominators → ℓ²x² + 2hℓx + (h² - pe²) = 0\n",
+    "        # Case 3.2 — roots \n",
     "        h = generate_discrete_sample(E, probs_E)\n",
-    "\n",
-    "        # Sampling from set E[-3,-2,-1,1,2,3]\n",
     "        l = generate_discrete_sample(E_small, probs_E_small)\n",
-    "\n",
-    "        # Sampling from set E[1....9]\n",
     "        e = generate_discrete_sample(E_positive, probs_E_positive)\n",
     "        p = generate_discrete_sample(E_positive, probs_E_positive)\n",
     "\n",
-    "        # Calculate from the given formula\n",
     "        a = l ** 2\n",
     "        b = 2 * h * l\n",
     "        c = h ** 2 - p * e ** 2\n",
     "\n",
     "    delta = b**2 - 4 * a * c\n",
-    "\n",
     "    return a, b, c, delta"
    ]
   },
